# data-catalog-client

./: README.md  pyproject.toml
src/dcclient/: __init__.py
